--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ html, body {margin:0; padding:0; width:100%; height:100%; background:#000; font-
 .progress-bar-container {position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:30;}
 .progress-bar {height:100%; width:0%; background:#F8AC10; border-radius:3px;}
 .videos-container.has-active .video-wrapper:not(.active) .play-overlay,
-.videos-container.has-active .video-wrapper:not(.active) .seek-btn {display:none;}
+.videos-container.has-active .video-wrapper:not(.active) .seek-btn,
+.videos-container.has-active .video-wrapper:not(.active) .close-btn {display:none;}
 @media(max-width:900px){.videos-container{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(3,1fr);}.video-wrapper.active{width:90%;height:85%;}}
 </style>
 </head>
@@ -69,7 +70,7 @@ wrappers.forEach(w=>{
       wrappers.forEach(x=>{if(x!==w)x.classList.add('inactive');});
       w.classList.add('active');
       activeWrapper=w;
-      v.muted=false; // włącza dźwięk dopiero po kliknięciu
+      v.muted=false;
       v.play();
       overlay.classList.replace('play','pause');
       addProgress(w,v);
