--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
 html, body {margin:0; padding:0; width:100%; height:100%; background:#000; font-family:sans-serif;}
 .videos-container {width:95vw; height:95vh; margin:0 auto; padding:20px 0; display:grid; grid-template-columns:repeat(3,1fr); grid-template-rows:repeat(2,1fr); gap:12px; position:relative;}
 .video-wrapper {position:relative; border-radius:12px; overflow:hidden; display:flex; justify-content:center; align-items:center;}
-.video-wrapper video {width:100%; height:100%; object-fit:contain; background:#000; display:block;}
+.video-wrapper video {width:100%; height:100%; object-fit:contain; background:#000; display:block; pointer-events:none;}
+.video-wrapper.active video {pointer-events:auto;}
 .video-wrapper.inactive video {filter: blur(4px) brightness(0.35);}
 .video-wrapper.active {position:absolute; top:50%; left:50%; width:66%; height:90%; transform:translate(-50%,-50%); z-index:100;}
-.play-overlay {position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:30; opacity:0;}
+.play-overlay {position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:200; opacity:0;}
 .play-overlay.play::after {content:""; border-left:22px solid #F8AC10; border-top:14px solid transparent; border-bottom:14px solid transparent;}
 .play-overlay.pause::after {content:""; width:18px; height:22px; border-left:6px solid #F8AC10; border-right:6px solid #F8AC10;}
 .video-wrapper.active:hover .play-overlay {opacity:1; pointer-events:auto;}
-.seek-btn {position:absolute; top:50%; width:48px; height:48px; background:rgba(255,255,255,0.7); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; color:#F8AC10; cursor:pointer; z-index:35;}
+.seek-btn {position:absolute; top:50%; width:48px; height:48px; background:rgba(255,255,255,0.7); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; color:#F8AC10; cursor:pointer; z-index:200;}
 .seek-btn.left {left:14px;}
 .seek-btn.right {right:14px;}
 .video-wrapper.active:hover .seek-btn {display:flex;}
-.close-btn {position:absolute; top:12px; right:12px; width:36px; height:36px; background:rgba(255,255,255,0.75); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; cursor:pointer; z-index:40;}
+.close-btn {position:absolute; top:12px; right:12px; width:36px; height:36px; background:rgba(255,255,255,0.75); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; cursor:pointer; z-index:200;}
 .video-wrapper.active .close-btn {display:flex;}
-.progress-bar-container {position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:30;}
+.progress-bar-container {position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:200;}
 .progress-bar {height:100%; width:0%; background:#F8AC10; border-radius:3px;}
 .videos-container.has-active .video-wrapper:not(.active) .play-overlay,
 .videos-container.has-active .video-wrapper:not(.active) .seek-btn,
@@ -56,6 +57,14 @@ function closeActiveVideo(){
   activeWrapper=null;
 }
 
+function addProgress(w,v){
+  const c=document.createElement('div'); c.className='progress-bar-container';
+  const b=document.createElement('div'); b.className='progress-bar';
+  c.appendChild(b); w.appendChild(c);
+  c.onclick=e=>{const r=c.getBoundingClientRect(); v.currentTime=((e.clientX-r.left)/r.width)*v.duration;}
+  v.addEventListener('timeupdate',()=>{b.style.width=(v.currentTime/v.duration*100)+'%';});
+}
+
 wrappers.forEach(w=>{
   const v=w.querySelector('video');
   const overlay=w.querySelector('.play-overlay');
@@ -75,25 +84,17 @@ wrappers.forEach(w=>{
       overlay.classList.replace('play','pause');
       addProgress(w,v);
     } else if(activeWrapper===w){
-      if(v.paused){v.play();overlay.classList.replace('play','pause');}
-      else{v.pause();overlay.classList.replace('pause','play');}
+      if(v.paused){v.play(); overlay.classList.replace('play','pause');}
+      else{v.pause(); overlay.classList.replace('pause','play');}
     }
   };
 
-  left.onclick=e=>{e.stopPropagation();v.currentTime=Math.max(0,v.currentTime-5);}
-  right.onclick=e=>{e.stopPropagation();v.currentTime=Math.min(v.duration,v.currentTime+5);}
-  close.onclick=e=>{e.stopPropagation();closeActiveVideo();}
+  left.onclick=e=>{e.stopPropagation(); v.currentTime=Math.max(0,v.currentTime-5);}
+  right.onclick=e=>{e.stopPropagation(); v.currentTime=Math.min(v.duration,v.currentTime+5);}
+  close.onclick=e=>{e.stopPropagation(); closeActiveVideo();}
 });
 
-function addProgress(w,v){
-  const c=document.createElement('div');c.className='progress-bar-container';
-  const b=document.createElement('div');b.className='progress-bar';
-  c.appendChild(b);w.appendChild(c);
-  c.onclick=e=>{const r=c.getBoundingClientRect();v.currentTime=((e.clientX-r.left)/r.width)*v.duration;}
-  v.addEventListener('timeupdate',()=>{b.style.width=(v.currentTime/v.duration*100)+'%';});
-}
-
-document.addEventListener('keydown',e=>{if(e.key==='Escape')closeActiveVideo();});
+document.addEventListener('keydown', e=>{if(e.key==='Escape') closeActiveVideo();});
 </script>
 
 </body>
