--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Video Grid with Visible Play</title>
+<title>Video Grid Play Buttons Visible</title>
 <style>
 html, body {margin:0; padding:0; width:100%; height:100%; background:#000; font-family:sans-serif;}
 .videos-container {width:95vw; height:95vh; margin:0 auto; padding:20px 0; display:grid; grid-template-columns:repeat(3,1fr); grid-template-rows:repeat(2,1fr); gap:12px; position:relative;}
 .video-wrapper {position:relative; border-radius:12px; overflow:hidden; display:flex; justify-content:center; align-items:center;}
 .video-wrapper video {width:100%; height:100%; object-fit:contain; background:#000; display:block; pointer-events:none;}
-.video-wrapper.active video {pointer-events:auto;}
 .video-wrapper.inactive video {filter: blur(4px) brightness(0.35);}
-.video-wrapper.active {position:absolute; top:50%; left:50%; width:66%; height:90%; transform:translate(-50%,-50%); z-index:100;}
-.play-overlay {position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:200;}
+.video-wrapper.active {position:absolute; top:50%; left:50%; width:66%; height:90%; transform:translate(-50%,-50%); z-index:100; pointer-events:auto;}
+.play-overlay {position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:200; pointer-events:auto;}
 .play-overlay.play::after {content:""; border-left:22px solid #F8AC10; border-top:14px solid transparent; border-bottom:14px solid transparent;}
 .play-overlay.pause::after {content:""; width:18px; height:22px; border-left:6px solid #F8AC10; border-right:6px solid #F8AC10;}
 .seek-btn {position:absolute; top:50%; width:48px; height:48px; background:rgba(255,255,255,0.7); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; color:#F8AC10; cursor:pointer; z-index:200;}
