--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@ html, body {margin:0; padding:0; width:100%; height:100%; background:#000; font-
 .close-btn {position:absolute; top:12px; right:12px; width:36px; height:36px; background:rgba(255,255,255,0.75); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; cursor:pointer; z-index:200;}
 .progress-bar-container {position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:200;}
 .progress-bar {height:100%; width:0%; background:#F8AC10; border-radius:3px;}
-.videos-container.has-active .video-wrapper:not(.active) .seek-btn,
-.videos-container.has-active .video-wrapper:not(.active) .close-btn {display:none;}
 @media(max-width:900px){.videos-container{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(3,1fr);}.video-wrapper.active{width:90%;height:85%;}}
 </style>
 </head>
@@ -40,21 +38,26 @@ const container=document.querySelector('.videos-container');
 const wrappers=document.querySelectorAll('.video-wrapper');
 let activeWrapper=null;
 
-// Funkcja wymusza załadowanie pierwszej klatki w miniaturkach
+// wymuszanie pokazania miniatur w Safari
 wrappers.forEach(w=>{
   const v=w.querySelector('video');
-  v.currentTime = 0.01; // Safari pokaże ramkę
+  v.currentTime = 0.01;
   v.pause();
 });
 
 function closeActiveVideo(){
-  if(!activeWrapper)return;
+  if(!activeWrapper) return;
   activeWrapper.querySelector('video').pause();
   container.classList.remove('has-active');
   wrappers.forEach(w=>{
     w.classList.remove('active','inactive');
     w.querySelector('.play-overlay').className='play-overlay play';
     w.querySelectorAll('.progress-bar-container').forEach(p=>p.remove());
+    // pokazujemy przyciski ponownie dla wszystkich
+    w.querySelector('.play-overlay').style.display='flex';
+    w.querySelector('.seek-btn.left').style.display='flex';
+    w.querySelector('.seek-btn.right').style.display='flex';
+    w.querySelector('.close-btn').style.display='flex';
   });
   activeWrapper=null;
 }
@@ -84,6 +87,21 @@ wrappers.forEach(w=>{
       v.muted=false;
       v.play();
       overlay.classList.replace('play','pause');
+
+      // pokazujemy tylko przyciski aktywnego wideo
+      overlay.style.display='flex';
+      left.style.display='flex';
+      right.style.display='flex';
+      close.style.display='flex';
+      wrappers.forEach(x=>{
+        if(x!==w){
+          x.querySelector('.play-overlay').style.display='none';
+          x.querySelector('.seek-btn.left').style.display='none';
+          x.querySelector('.seek-btn.right').style.display='none';
+          x.querySelector('.close-btn').style.display='none';
+        }
+      });
+
       addProgress(w,v);
     } else if(activeWrapper===w){
       if(v.paused){v.play(); overlay.classList.replace('play','pause');}
